updated inference notebook

--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -1,7 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "279ac4ee-a5bf-40b5-9f2a-2c536a1326a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optional setup; use if the notebook is not running inside the rtfm conda environment\n",
+    "!git clone https://github.com/mlfoundations/rtfm.git\n",
+    "%cd rtfm\n",
+    "\n",
+    "# Ensure pip is up to date\n",
+    "!pip install --upgrade pip\n",
+    "\n",
+    "# Install Python 3.8 using pip\n",
+    "!pip install python==3.8\n",
+    "\n",
+    "# Install pip dependencies from requirements.txt\n",
+    "!pip install -r requirements.txt\n",
+    "\n",
+    "# Install additional dependencies\n",
+    "!pip install git+https://github.com/jpgard/llama-recipes.git\n",
+    "!pip install -e .\n",
+    "!pip install --no-deps git+https://github.com/mlfoundations/tableshift.git"
+   ]
+  },
+  {
    "cell_type": "markdown",
+   "id": "9ae8598ee797839f",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "# Inference with TabuLa-8B\n",
     "\n",
@@ -14,31 +47,22 @@
     "TabuLa's inference uses pandas DataFrames to construct examples for downstream inference. We directly construct Pandas DataFrames below, but you can also read DataFrames from CSV files or any other source that can be converted to DataFrame.\n",
     "\n",
     "**Note about evaluation with labeled data**: If you only want to perform efficient evaluation on data that is already labeled (i.e. to assess the accuracy of TabuLa on your own dataset), we provide separate code to do this which is likely to be more performant than the code in this notebook (which is optimized for simplicity/usability, not performance). Please see the README in the main repo for instructions on how to prepare your data for evaluation with our eval pipeline. Note that that eval pipeline (not the code in this notebook) is also what was used to evaluate TabuLa-8B on our [paper](https://arxiv.org/abs/2406.12031)."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9ae8598ee797839f"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "14460216956d8859",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "# Model loading and setup\n",
     "\n",
     "First, load the model and tokenizer. It is important to use the TabuLa tokenizer (not the base Llama 3 tokenizer) due to the special tokens used for serialization."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "14460216956d8859"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ffc2832834a32c77"
+   ]
   },
   {
    "cell_type": "code",
@@ -63,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d8c3b1ad23b4f899ba3d05019ea754f",
+       "model_id": "017a0900093145a3a8d3cae3e2d389e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,17 +157,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7eb7965984ae881",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "# Creating your own data for inference\n",
     "\n",
     "If you simply want to explore the model, or would like to construct your own data for inference, you can simply construct DataFrames to represent the labeled examples (\"shots\"), if any are used, and the target example that you want to predict on.\n",
     "\n",
     "Below is an example.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d7eb7965984ae881"
+   ]
   },
   {
    "cell_type": "code",
@@ -154,14 +181,16 @@
      "end_time": "2024-06-28T20:04:39.766837Z",
      "start_time": "2024-06-28T20:04:12.941752Z"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:Column fitness_level is not in target example; got columns Index(['name', 'occupation', 'height_in_meters', 'weight_in_kg', 'bike'], dtype='object'). Adding a dummy placeholder with empty values for preprocessing. This behavior is expected if your target samples do not contain the target column at all.\n",
       "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
      ]
     },
@@ -169,7 +198,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prediction is: excellent\n"
+      "Prediction for sample \n",
+      "    location  temperature  humidity  wind_speed  pressure month  \\\n",
+      "0  San Jose           23        55           8      1013  July   \n",
+      "\n",
+      "  weather_yesterday  precipitation  visibility weather_today  \n",
+      "0             Sunny              0          10         Sunny   \n",
+      " is: Sunny\n"
      ]
     }
    ],
@@ -210,11 +245,18 @@
     "    target_choices=[\"Sunny\", \"Partly Sunny\", \"Cloudy\", \"Partly Cloudy\", \"Rain\"],\n",
     "    labeled_examples=labeled_examples,\n",
     ")\n",
-    "print(f\"prediction for sample {target_example} is: {output}\")"
+    "print(f\"Prediction for sample \\n {target_example} \\n is: {output}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "5697e998e9356e4",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "# Prediction with continuous targets\n",
     "\n",
@@ -223,20 +265,33 @@
     "In order to ensure best performance, it is important to ensure that your serialization of the continuous targets matches exactly the expected format used during TabuLa's training.\n",
     "\n",
     "Note that here we'll process the examples together to ensure the discretization is applied correctly, before splitting into train/target samples."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5697e998e9356e4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dd6c86babaa9b907",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction for sample \n",
+      "    location  size_sqft  bedrooms  bathrooms  age  lot_size_acres  garage  \\\n",
+      "0  New York       1200         3          2   10            0.15    True   \n",
+      "\n",
+      "                price  \n",
+      "0  greater than 850.0   \n",
+      " is: between 700.0 and 750.0\n"
+     ]
+    }
+   ],
    "source": [
     "from rtfm.serialization.serialization_utils import discretize_continuous_column\n",
     "\n",
@@ -269,7 +324,7 @@
     "    target_choices=target_choices,\n",
     "    labeled_examples=labeled_examples,\n",
     ")\n",
-    "print(f\"prediction for sample {target_example} is: {output}\")"
+    "print(f\"Prediction for sample \\n {target_example} \\n is: {output}\")"
    ]
   },
   {
